# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  minishell  pipe.c  right_redirect.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
srcs/: builtins.c  ft_change_shell_level.c  ft_create_env.c  ft_left_redirect.c  ft_parse.c  ft_pipe.c  ft_print_output.c  ft_right_redirect.c  ft_show_promt.c  ft_strdup_new.c  ft_strjoin_new.c  ft_structure_env.c  ft_work_with_t_arg_lists.c  main copy.c  main.c  minishell copy.h  minishell.h  utils.c
srcs/dquordle/: built_utils.c  builtins.c  cd_env.c  exit.c  export.c  ft_get_hist.c  gnl.c  main1.c  more_utils.c  signals.c  term_utils.c  termcap.c  unset.c
srcs/libft/: CMakeLists.txt  Makefile  ft_strjoin.c  ft_strlen.c
srcs/parser/: 0ld_utils_1.c  ft_check_syntax.c  ft_parse.c  ft_parse_str_till_dq_ends.c  ft_parse_str_till_env_var_ends.c  ft_parse_str_till_it_ends.c  ft_parse_str_till_sq_ends.c  ft_work_with_dollar.c  new_utils.c  p_utils_1.c  trash.c
srcs/utils/: ft_strdup_new.c  ft_strjoin_new.c  utils_arg.c  utils_arg_1.c  utils_arg_2.c  utils_common.c  utils_env.c  utils_error.c  utils_error_1.c  utils_error_2.c  utils_redir.c
srcs/work_with_t_args_list/: ft_check.c  ft_exec_bin.c  ft_work_with_t_arg_lists.c
